# osmnx-examples

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  environment-tests.yml  environment.yml  lint_format.sh  pyproject.toml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: cache-keepalive.yml  ci.yml  keep-cache-alive.yml  tests.yml
notebooks/: 00-osmnx-features-demo.ipynb  01-overview-osmnx.ipynb  02-example-osm-to-shapefile.ipynb  02-routing-speed-time.ipynb  03-example-osm-place-network.ipynb  03-graph-place-queries.ipynb  04-example-simplify-network.ipynb  04-simplify-graph-consolidate-nodes.ipynb  05-example-save-load-networks-shapes.ipynb  05-save-load-networks.ipynb  06-example-osmnx-networkx.ipynb  06-stats-indicators-centrality.ipynb  07-example-plot-network-over-shape.ipynb  07-plot-graph-over-shape.ipynb  08-custom-filters-infrastructure.ipynb  08-example-line-graph.ipynb  09-example-figure-ground.ipynb  10-building-footprints.ipynb  11-interactive-web-mapping.ipynb  11-plot-routes-folium-web-map.ipynb  12-node-elevations-edge-grades.ipynb  13-isolines-isochrones.ipynb  14-clean-intersection-node-clusters.ipynb  14-osmnx-to-igraph.ipynb  15-advanced-plotting.ipynb  15-calculate-visualize-edge-bearings.ipynb  16-download-osm-geospatial-entities.ipynb  16-download-osm-geospatial-features.ipynb  16-work-with-other-infrastructures.ipynb  17-edge-bearing-analysis.ipynb  17-street-network-orientations.ipynb  18-network-constrained-clustering.ipynb  18-osmnx-to-igraph.ipynb  osmnx-demo.ipynb  run_notebooks.sh
notebooks/input_data/ZillowNeighborhoods-CA/: ZillowNeighborhoods-CA.prj
tests/: environment-tests.yml  lint_format.sh
