[project]
authors = [{ name = "Geoff Boeing", email = "boeing@usc.edu" }]
dependencies = ["osmnx[entropy,neighbors,raster,visualization]==2.0.4"]
description = "Gallery of OSMnx tutorials, usage examples, and feature demonstrations."
license = "MIT"
license-files = ["LICENSE.txt"]
name = "osmnx-examples"
readme = "README.md"
requires-python = ">=3.9"
version = "2.0.5" # match pinned version above

[dependency-groups]
dev = ["nbdime", "pre-commit"]
notebooks = ["folium>=0.12", "jupyterlab>=3.0", "mapclassify>=2.5", "igraph>=0.9"]

[tool.ruff]
cache-dir = "~/.cache/pre-commit/ruff"
line-length = 100

[tool.ruff.lint]
extend-select = ["A", "B", "E", "F", "I", "UP", "W"]

[tool.ruff.lint.pycodestyle]
max-line-length = 110 # line length + 10% since it isn't a hard upper bound
