[project]
authors = [{ name = "Geoff Boeing", email = "boeing@usc.edu" }]
dependencies = ["osmnx[all]==2.0.5"]
description = "Gallery of OSMnx tutorials, usage examples, and feature demonstrations."
license = "MIT"
license-files = ["LICENSE.txt"]
name = "osmnx-examples"
readme = "README.md"
requires-python = ">=3.9"
version = "2.0.5" # match pinned version above

[project.optional-dependencies]
all = ["folium", "jupyterlab", "mapclassify", "igraph"]

[dependency-groups]
dev = ["nbdime", "pre-commit"]

[tool.ruff]
cache-dir = "~/.cache/pre-commit/ruff"
line-length = 100

[tool.ruff.lint]
extend-select = ["A", "B", "E", "F", "I", "UP", "W"]

[tool.ruff.lint.pycodestyle]
max-line-length = 110 # line length + 10% since it isn't a hard upper bound
